final assignment week2

--- a/assign2.html
+++ b/assign2.html
@@ -68,7 +68,7 @@
                 </tr>
             </tbody>
         </table>
-        <h1>Tickets for our next match</h1>
+        <h1>Book Tickets for our next match</h1>
         <form action="" method="">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required><br><br>
