--- a/assign2.html
+++ b/assign2.html
@@ -49,20 +49,20 @@
             <tbody>
                 <tr>
                     <td>1.</td>
-                    <td>Liverpool</td>
+                    <td>Liverpool.</td>
                     <td>29</td>
                     <td>70</td>
                 </tr>
                 <tr>
                     <td>2.</td>
-                    <td>Arsenal</td>
+                    <td>Arsenal.</td>
                     <td>29</td>
                     <td>58</td>
                     
                 </tr>
                 <tr>
                     <td>3.</td>
-                    <td>Nottigam forest</td>
+                    <td>Nottigam forest.</td>
                     <td>29</td>
                     <td>54</td>
                 </tr>
